--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth Suplementos</title>
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div></div>
+        <div></div>
+        <div></div>
+    </header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section>
+            Produtos
+        </section>
+        <footer></footer>
+
+    </main>
     <script src="./js/script.js"></script>
 </body>
 </html>
