Page: Init Index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon_io/site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./img/favicon_io/favicon.ico">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth Suplementos</title>
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="top-bar text-center py-1">
+            Qualidade internacional comprovada e preço direto da fábrica.
+        </div>
+        <div class="main-bar d-flex align-items-center px-3 py-2">
+            <div class="logo">
+                <img src="./img/growth-logo.png" alt="Growth Supplements" class="img-fluid">
+            </div>
+            <div class="d-flex  align-items-center text-white">
+                <i class="bi bi-person mr-2"></i>
+                <p class="mb-0">Bem vindo visitante, <a href="#" class="text-white">cadastre-se</a> ou <a href="#"
+                        class="text-white">faça seu login</a></p>
+            </div>
+            <div class="cart">
+                <a href="#" class="#">
+                    <i class="bi bi-cart"></i>
+                </a>
+            </div>
+        </div>
     </header>
-    <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section>
-            Produtos
-        </section>
-        <footer></footer>
 
-    </main>
-    <script src="./js/script.js"></script>
+
+    <footer class="footer">
+        <p>&copy; 2024 Loja de Suplementos. Todos os direitos reservados.</p>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
