--- a/public/index.html
+++ b/public/index.html
@@ -25,19 +25,18 @@
         <div class="top-bar text-center py-1">
             Qualidade internacional comprovada e preço direto da fábrica.
         </div>
-        <div class="main-bar d-flex align-items-center px-3 py-2">
+        <div class="main-bar d-flex justify-content-between align-items-center px-3 py-2">
             <div class="logo">
                 <img src="./img/growth-logo.png" alt="Growth Supplements" class="img-fluid">
             </div>
-            <div class="d-flex  align-items-center text-white">
-                <i class="bi bi-person mr-2"></i>
-                <p class="mb-0">Bem vindo visitante, <a href="#" class="text-white">cadastre-se</a> ou <a href="#"
-                        class="text-white">faça seu login</a></p>
-            </div>
-            <div class="cart">
-                <a href="#" class="#">
-                    <i class="bi bi-cart"></i>
-                </a>
+            <div class="col-1 d-flex  align-items-center cad-login text-white">
+                <i class="bi bi-person mr-2 icon-user"></i>
+                <p class="mb-0">Bem vindo visitante, <a href="#" class="text-white">cadastre-se</a> ou <a href="#"class="text-white">faça seu login</a></p>
+                <div class="cart">
+                    <a href="#" class="#">
+                        <i class="bi bi-cart"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
