--- a/public/index.html
+++ b/public/index.html
@@ -14,31 +14,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth Suplementos</title>
-    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
-        <div class="top-bar text-center py-1">
-            Qualidade internacional comprovada e preço direto da fábrica.
+        <div class="top-bar py-1">
+           <p>Qualidade internacional comprovada e preço direto da fábrica.</p>
         </div>
-        <div class="main-bar d-flex justify-content-between align-items-center px-3 py-2">
-            <div class="logo">
-                <img src="./img/growth-logo.png" alt="Growth Supplements" class="img-fluid">
-            </div>
-            <div class="col-1 d-flex  align-items-center cad-login text-white">
-                <i class="bi bi-person mr-2 icon-user"></i>
-                <p class="mb-0">Bem vindo visitante, <a href="#" class="text-white">cadastre-se</a> ou <a href="#"class="text-white">faça seu login</a></p>
-                <div class="cart">
-                    <a href="#" class="#">
-                        <i class="bi bi-cart"></i>
-                    </a>
+        <nav class="navbar navbar-expand-lg navbar-custom">
+            <div class="container-fluid">
+              <div class="navbar-70 navbar-section">
+                <a class="navbar-brand" href="#"><img src="./img/growth-logo.png" alt=""></a>
+              </div>
+              <div class="navbar-20 navbar-section d-flex text-white justify-cont-center">
+                <div class="icon-nav"><i class="bi bi-person icon-nav"></i></div>
+                <span>Bem vindo visitante,</span> <a href="cadastro.html" class="fw-bold">cadastre-se</a><a href="login.html" class="fw-bold">faça seu login</a></span>
                 </div>
-            </div>
-        </div>
+              <div class="navbar-10 navbar-section d-flex justify-content-end">
+                <i class="bi bi-cart"></i>
+              </div>
+          </div>
+          </nav>
+        
     </header>
 
 
