--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
               <div class="navbar-70 navbar-section">
                 <a class="navbar-brand" href="#"><img src="./img/growth-logo.png" alt=""></a>
               </div>
+              <!-- <div class="icon-nav"><i class="bi bi-person icon-nav"></i></div> -->
               <div class="navbar-20 navbar-section d-flex text-white justify-cont-center">
-                <div class="icon-nav"><i class="bi bi-person icon-nav"></i></div>
                 <span>Bem vindo visitante,</span> <a href="cadastro.html" class="fw-bold">cadastre-se</a><a href="login.html" class="fw-bold">faça seu login</a></span>
                 </div>
               <div class="navbar-10 navbar-section d-flex justify-content-end">
