--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
@@ -14,41 +12,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth Suplementos</title>
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header>
-        <div class="top-bar py-1">
-           <p>Qualidade internacional comprovada e preço direto da fábrica.</p>
+  <header>
+    <div class="top-bar py-1">
+        <div class="container">
+            <p class="fw-bold">Qualidade internacional comprovada e preço direto da fábrica.</p>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-custom">
-            <div class="container-fluid">
-              <div class="navbar-70 navbar-section">
-                <a class="navbar-brand" href="#"><img src="./img/growth-logo.png" alt=""></a>
-              </div>
-              <div class="icon-nav"><i class="bi bi-person icon-nav offset-10"></i></div>
-              <div class="navbar-20 navbar-section d-flex text-white justify-cont-center">
-                <span>Bem vindo visitante,</span> <a href="cadastro.html" class="fw-bold">cadastre-se</a><a href="login.html" class="fw-bold">faça seu login</a></span>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="./img/growth-logo.png" alt="Growth Supplements Logo">
+            </a>
+            <div class="d-flex ms-3">
+                <div class="dropdown me-2">
+                    <a class="icon-link dropdown-toggle-split text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-person"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="login.html">Entre</a></li>
+                        <li><a class="dropdown-item" href="cadastro.html">Cadastre-se</a></li>
+                    </ul>
                 </div>
-              <div class="navbar-10 navbar-section d-flex justify-content-end">
-                <i class="bi bi-cart"></i>
-              </div>
-          </div>
-          </nav>
-    </header>
+                <div class="cart text-white">
+                  <a class="" data-bs-toggle="offcanvas" href="#cart-canvas" role="button" aria-controls="cart-canvas">
+                    <i class="bi bi-cart"></i>
+                  </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+</header>
 
+<div class="offcanvas offcanvas-end" tabindex="-1" id="cart-canvas" aria-labelledby="cartLabel">
+  <div class="offcanvas-header">
+      <h5 class="offcanvas-title text-uppercase fw-bold text-primary text-center" id="cartLabel">Itens do Meu Carrinho</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+     <!-- Insira o conteúdo aqui -->
+  </div>
+</div>
 
     <footer class="footer">
         <p>&copy; 2024 Loja de Suplementos. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
