--- a/app/pages/cadastro/cadastro.html
+++ b/app/pages/cadastro/cadastro.html
@@ -2,12 +2,7 @@
 <html lang="pt-BR">
 <head>
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/resources/images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/resources/images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/resources/images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="../assets/resources/images/favicon_io/site.webmanifest">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="../assets/resources/images/favicon_io/favicon.ico">
+    <div id="favicons-placeholder"></div>
     <!-- Favicons -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,7 +40,7 @@
   <div id="footer-placeholder"></div>
   <!-- footer -->
     <!-- Script -->
-    <script src="/app/js/footer.js"></script>
+    <script src="/app/js/routers.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
