Edit: styles.css global

--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -12,20 +12,13 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
-    <link rel="stylesheet" href="/app/css/reset.css">
-    <link rel="stylesheet" href="/app/css/style.css">
+    <link rel="stylesheet" href="/assets/resources/styles/reset.css">
+    <link rel="stylesheet" href="/assets/resources/styles/styles.css">
 </head>
 
 <body>
     <!-- Cabeçalho -->
-    <!-- Top-Bar -->
   <header>
-    <div class="top-bar py-1">
-        <div class="container">
-            <p class="fw-bold">Qualidade internacional comprovada e preço direto da fábrica.</p>
-        </div>
-    </div>
-    <!-- Top-Bar -->
     <!-- Navegação -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
@@ -36,11 +29,12 @@
     </nav>
     <!-- Navegação -->
 </header>
+  <!-- Cabeçalho -->
   <!-- footer -->
   <div id="footer-placeholder"></div>
   <!-- footer -->
     <!-- Script -->
-    <script src="/app/js/routers.js"></script>
+    <script src="/app/util/routers.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
