--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,9 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
-    <link rel="stylesheet" href=".cs">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/assets/resources/styles/reset.css">
+    <link rel="stylesheet" href="/assets/resources/styles/styles.css">
+    <link rel="stylesheet" href="/app/index.css">
 </head>
 
 <body>
@@ -87,7 +87,7 @@
   </div>
   <!-- Side-Bar do Menu -->
     <!-- Script -->
-    <script src="./js/routers.js"></script>
+    <script src="./util/routers.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
