--- a/app/index.html
+++ b/app/index.html
@@ -78,8 +78,8 @@
     </div>
     <div class="offcanvas-body menu-list-items">
         <div class="container">
-        <p><a class="dropdown-item" href="login.html">• Entre</a></p>
-        <p><a class="dropdown-item" href="cadastro.html">• Cadastre-se</a></p>
+        <p><a class="dropdown-item" href="/app/pages/login/login.html">• Entre</a></p>
+        <p><a class="dropdown-item" href="/app/pages/cadastro/cadastro.html">• Cadastre-se</a></p>
         </div>  
     </div>
     </div>
