--- a/app/index.html
+++ b/app/index.html
@@ -83,9 +83,37 @@
         </div>  
     </div>
     </div>
-    <div id="footer-placeholder"></div>
   </div>
   <!-- Side-Bar do Menu -->
+    <!-- Carousel -->
+    <div id="carouselAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item">
+            <img src="/assets/resources/images/carousel1.jpg" class="img-desktop" alt="carousel1">
+            <img src="/assets/resources/images/carousel-img1.jpg" class="img-smart" alt="carousel1-img">
+          </div>
+          <div class="carousel-item active">
+            <img src="/assets/resources/images/carousel2.jpg" class="img-desktop" alt="carousel2">
+            <img src="/assets/resources/images/carousel-img2.jpg" class="img-smart" alt="carousel2-img">
+          </div>
+          <div class="carousel-item">
+            <img src="/assets/resources/images/carousel3.jpg" class="img-desktop" alt="carousel3">
+            <img src="/assets/resources/images/carousel-img3.jpg" class="img-smart alt="carousel3-img">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    <!-- Carousel -->
+     <!-- footer -->
+     <div id="footer-placeholder"></div>
+     <!-- footer -->
     <!-- Script -->
     <script src="./util/routers.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
