--- a/app/index.html
+++ b/app/index.html
@@ -1,125 +1,223 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <!-- Favicons -->
-    <div id="favicons-placeholder"></div>
-    <!-- Favicons -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Growth Suplementos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
-    <link rel="stylesheet" href="/assets/resources/styles/reset.css">
-    <link rel="stylesheet" href="/assets/resources/styles/styles.css">
-    <link rel="stylesheet" href="/app/index.css">
+  <!-- Favicons -->
+  <div id="favicons-placeholder"></div>
+  <!-- Favicons -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Growth Suplementos</title>
+  <link rel="stylesheet" href="/assets/resources/styles/reset.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
+    rel="stylesheet">
+  <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
+  <link rel="stylesheet" href="/assets/resources/styles/styles.css">
+  <link rel="stylesheet" href="/app/index.css">
 </head>
 
 <body>
-    <!-- Cabeçalho -->
-    <!-- Top-Bar -->
+  <!-- Cabeçalho -->
+  <!-- Top-Bar -->
   <header>
     <div class="top-bar py-1">
-        <div class="container">
-            <p class="fw-bold">Qualidade internacional comprovada e preço direto da fábrica.</p>
-        </div>
+      <div class="container">
+        <p class="fw-bold">Qualidade internacional comprovada e preço direto da fábrica.</p>
+      </div>
     </div>
     <!-- Top-Bar -->
     <!-- Navegação -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="./index.html">
-                <img src="../assets/resources/images/growth-logo.png" alt="Growth Supplements Logo">
+      <div class="container">
+        <a class="navbar-brand" href="./index.html">
+          <img src="../assets/resources/images/growth-logo.png" alt="Growth Supplements Logo">
+        </a>
+        <div class="d-flex ms-3">
+          <a class="icon-link text-white menu-list" data-bs-toggle="offcanvas" href="#menu-list" role="button"
+            aria-controls="menu-list">
+            <i class="bi bi-list"></i>
+          </a>
+          <div class="dropdown me-2">
+            <a class="icon-link dropdown-toggle-split text-white user-menu" href="#" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="bi bi-person"></i>
             </a>
-            <div class="d-flex ms-3">
-                <a class="icon-link text-white menu-list" data-bs-toggle="offcanvas" href="#menu-list" role="button" aria-controls="menu-list">
-                    <i class="bi bi-list"></i>
-                  </a>
-                <div class="dropdown me-2">
-                    <a class="icon-link dropdown-toggle-split text-white user-menu" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="bi bi-person"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./pages/login/login.html">Entre</a></li>
-                        <li><a class="dropdown-item" href="./pages/cadastro/cadastro.html">Cadastre-se</a></li>
-                    </ul>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="./pages/login/login.html">Entre</a></li>
+              <li><a class="dropdown-item" href="./pages/cadastro/cadastro.html">Cadastre-se</a></li>
+            </ul>
 
-                </div>
-                <div class="cart text-white">
-                  <a class="" data-bs-toggle="offcanvas" href="#cart-canvas" role="button" aria-controls="cart-canvas">
-                    <i class="bi bi-cart"></i>
-                  </a>
-                </div>
-            </div>
+          </div>
+          <div class="cart text-white">
+            <a class="" data-bs-toggle="offcanvas" href="#cart-canvas" role="button" aria-controls="cart-canvas">
+              <i class="bi bi-cart"></i>
+            </a>
+          </div>
         </div>
+      </div>
     </nav>
     <!-- Navegação -->
-</header>
-<!-- Cabeçalho -->
-<!-- Side-Bar do Carrinho -->
-<div class="offcanvas offcanvas-end" tabindex="-1" id="cart-canvas" aria-labelledby="cartLabel">
-  <div class="offcanvas-header">
-      <h5 class="offcanvas-title text-uppercase fw-bold text-primary text-center" id="cartLabel">Itens do Meu Carrinho</h5>
-      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-     <!-- Insira o conteúdo aqui -->
-  </div>
-</div>
-<!-- Side-Bar do Carrinho -->
+    <!-- Side-Bar do Carrinho -->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="cart-canvas" aria-labelledby="cartLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title text-uppercase fw-bold text-primary text-center" id="cartLabel">Itens do Meu Carrinho
+        </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <!-- Insira o conteúdo aqui -->
+      </div>
+    </div>
+    <!-- Side-Bar do Carrinho -->
 
-<!-- Side-Bar do Menu -->
-<div class="offcanvas offcanvas-start" tabindex="-1" id="menu-list" aria-labelledby="menu-listLabel">
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="menu-listLabel">Menu</h5>
-      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body menu-list-items">
+    <!-- Side-Bar do Menu -->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="menu-list" aria-labelledby="menu-listLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="menu-listLabel">Menu</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body menu-list-items">
         <div class="container">
-        <p><a class="dropdown-item" href="/app/pages/login/login.html">• Entre</a></p>
-        <p><a class="dropdown-item" href="/app/pages/cadastro/cadastro.html">• Cadastre-se</a></p>
-        </div>  
+          <p><a class="dropdown-item" href="/app/pages/login/login.html">• Entre</a></p>
+          <p><a class="dropdown-item" href="/app/pages/cadastro/cadastro.html">• Cadastre-se</a></p>
+        </div>
+      </div>
     </div>
     </div>
-  </div>
-  <!-- Side-Bar do Menu -->
+    <!-- Side-Bar do Menu -->
     <!-- Carousel -->
     <div id="carouselAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item">
-            <img src="/assets/resources/images/carousel1.jpg" class="img-desktop" alt="carousel1">
-            <img src="/assets/resources/images/carousel-img1.jpg" class="img-smart" alt="carousel1-img">
+      <div class="carousel-inner">
+        <div class="carousel-item">
+          <img src="/assets/resources/images/carousel1.jpg" class="img-desktop" alt="carousel1">
+          <img src="/assets/resources/images/carousel-img1.jpg" class="img-smart" alt="carousel1-img">
+        </div>
+        <div class="carousel-item active">
+          <img src="/assets/resources/images/carousel2.jpg" class="img-desktop" alt="carousel2">
+          <img src="/assets/resources/images/carousel-img2.jpg" class="img-smart" alt="carousel2-img">
+        </div>
+        <div class="carousel-item">
+          <img src="/assets/resources/images/carousel3.jpg" class="img-desktop" alt="carousel3">
+          <img src="/assets/resources/images/carousel-img3.jpg" class="img-smart alt=" carousel3-img">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- Carousel -->
+  </header>
+  <!-- Cabeçalho -->
+
+  <!-- main -->
+  <main>
+
+    <!-- section prod -->
+    <section>
+      <!-- e-bit-div -->
+      <div class="e-bit-div container d-flex justify-content-center align-items-center">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-3 col-sm-2 col-md-2">
+            <img src="/assets/resources/images/e-bit logo.png" alt="e-bit logo" class="img-fluid">
           </div>
-          <div class="carousel-item active">
-            <img src="/assets/resources/images/carousel2.jpg" class="img-desktop" alt="carousel2">
-            <img src="/assets/resources/images/carousel-img2.jpg" class="img-smart" alt="carousel2-img">
-          </div>
-          <div class="carousel-item">
-            <img src="/assets/resources/images/carousel3.jpg" class="img-desktop" alt="carousel3">
-            <img src="/assets/resources/images/carousel-img3.jpg" class="img-smart alt="carousel3-img">
+          <div class="col-8 col-sm-9 col-md-6 ">
+            <p class="text-sm-left"><span class="fw-bold">Suplementos é Growth Supplements.</span>
+              Escolha seu <span class="fw-bold">suplemento</span> por categoria</p>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-    <!-- Carousel -->
-     <!-- footer -->
-     <div id="footer-placeholder"></div>
-     <!-- footer -->
-    <!-- Script -->
-    <script src="./util/routers.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
-    <!-- Script -->
+      <!-- e-bit-div -->
+      <div class="suplementos-div container">
+        <div class="row gx-1 gy-1"> <!-- gx-1 e gy-1 reduzem o espaçamento horizontal e vertical -->
+          <div class="col">
+            <div class="suplemento p-1"> <!-- Adiciona padding reduzido -->
+              <img src="/assets/resources/images/proteinas.png" alt="Proteínas" class="img-fluid">
+              <p class="fw-bold m-0">Proteínas</p> <!-- Remove a margem -->
+            </div>
+          </div>
+          <div class="col">
+            <div class="suplemento p-1">
+              <img src="/assets/resources/images/veganos.png" alt="Veganos" class="img-fluid">
+              <p class="fw-bold m-0">Veganos</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="suplemento p-1">
+              <img src="/assets/resources/images/vegetarianos.png" alt="Vegetarianos" class="img-fluid">
+              <p class="fw-bold m-0">Vegetarianos</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="suplemento p-1">
+              <img src="/assets/resources/images/termogenicos.png" alt="Termogênicos" class="img-fluid">
+              <p class="fw-bold m-0">Termogênicos</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="suplemento p-1">
+              <img src="/assets/resources/images/vitaminas.png" alt="Vitaminas" class="img-fluid">
+              <p class="fw-bold m-0">Vitaminas</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="suplemento p-1">
+              <img src="/assets/resources/images/aminoacidos.png" alt="Aminoácidos" class="img-fluid">
+              <p class="fw-bold m-0">Aminoácidos</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="suplemento p-1">
+              <img src="/assets/resources/images/carboidratos.png" alt="Carboidratos" class="img-fluid">
+              <p class="fw-bold m-0">Carboidratos</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </section>
+    <!-- section prod -->
+
+    <!-- section clientes -->
+    <section>
+
+    </section>
+    <!-- section clientes -->
+
+    <!-- section transporte -->
+    <section>
+
+    </section>
+    <!-- section transporte -->
+
+    <!-- section produtos -->
+    <section></section>
+    <!-- section produtos -->
+
+    <!-- section suplementos necessarios para o seu esporte -->
+    <section></section>
+    <!-- section suplementos necessarios para o seu esporte -->
+
+  </main>
+  <!-- main -->
+  <!-- footer -->
+  <div id="footer-placeholder"></div>
+  <!-- footer -->
+
+  <!-- Script -->
+  <script src="./util/routers.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
+  <!-- Script -->
 </body>
+
 </html>
