Edit: Section Suplementos

--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,8 @@
   <!-- Cabeçalho -->
   <!-- Top-Bar -->
   <header>
-    <div class="top-bar py-1">
-      <div class="container">
+    <div class="top-bar py-lg-1 py-1">
+      <div class="container ">
         <p class="fw-bold">Qualidade internacional comprovada e preço direto da fábrica.</p>
       </div>
     </div>
@@ -135,12 +135,14 @@
         </div>
       </div>
       <!-- e-bit-div -->
+
+      <!-- suplementos-div -->
       <div class="suplementos-div container">
-        <div class="row gx-1 gy-1"> <!-- gx-1 e gy-1 reduzem o espaçamento horizontal e vertical -->
+        <div class="row gx-1 gy-1"> 
           <div class="col">
-            <div class="suplemento p-1"> <!-- Adiciona padding reduzido -->
+            <div class="suplemento p-1"> 
               <img src="/assets/resources/images/proteinas.png" alt="Proteínas" class="img-fluid">
-              <p class="fw-bold m-0">Proteínas</p> <!-- Remove a margem -->
+              <p class="fw-bold m-0">Proteínas</p>
             </div>
           </div>
           <div class="col">
@@ -181,13 +183,74 @@
           </div>
         </div>
       </div>
-      
+      <!-- suplementos-div -->
+  
+      <!-- Carousel Suplementos -->
+      <div class="d-flex carousel-suplementos justify-content-center">
+        <div id="carouselSuplementosAutoplaying" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item">
+              <img src="/assets/resources/images/proteinas.png" alt="Proteínas" class="img-fluid">
+              <div class="text-center">
+                <p class="fw-bold">Proteínas</p>
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <img src="/assets/resources/images/veganos.png" alt="Veganos" class="img-fluid">
+              <div class="text-center">
+                <p class="fw-bold">Veganos</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/resources/images/vegetarianos.png" alt="Vegetarianos" class="img-fluid">
+              <div class="text-center">
+                <p class="fw-bold">Vegetarianos</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/resources/images/termogenicos.png" alt="Termogênicos" class="img-fluid">
+              <div class="text-center">
+                <p class="fw-bold">Termogênicos</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/resources/images/vitaminas.png" alt="Vitaminas" class="img-fluid">
+              <div class="text-center">
+                <p class="fw-bold">Vitaminas</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/resources/images/aminoacidos.png" alt="Aminoácidos" class="img-fluid">
+              <div class="text-center">
+                <p class="fw-bold">Aminoácidos</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/resources/images/carboidratos.png" alt="Carboidratos" class="img-fluid">
+              <div class="text-center">
+                <p class="fw-bold">Carboidratos</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselSuplementosAutoplaying"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselSuplementosAutoplaying"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <!-- Carousel Suplementos -->
     </section>
     <!-- section prod -->
 
     <!-- section clientes -->
     <section>
-
+      <div></div>
     </section>
     <!-- section clientes -->
 
