--- a/app/index.html
+++ b/app/index.html
@@ -341,14 +341,15 @@
       <div class="container mt-5">
         <!-- Carousel Suplementos -->
         <div class="d-flex carousel-suplementos justify-content-center">
-          <div id="carouselSuplementosAutoplaying" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselClientesAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="card flex-fill">
                   <div class="card-body d-flex flex-column">
                     <i class="bi bi-quote quote-double"></i>
                     <div class="text-center flex-grow-1 d-flex flex-column justify-content-between">
-                      <h5 class="card-title">Eu já recomendo a Growth em todos os meus grupos de Bariátricos que participo,
+                      <h5 class="card-title">Eu já recomendo a Growth em todos os meus grupos de Bariátricos que
+                        participo,
                         e também a todos meus…</h5>
                       <div>
                         <p class="card-text fw-bold">Débora P.</p>
@@ -373,7 +374,8 @@
                   <div class="card-body d-flex flex-column">
                     <i class="bi bi-quote quote-double"></i>
                     <div class="text-center flex-grow-1 d-flex flex-column justify-content-between">
-                      <h5 class="card-title">Ótima loja, com produtos no geral de muito boa qualidade e entrega rápida, segura e barata...</h5>
+                      <h5 class="card-title">Ótima loja, com produtos no geral de muito boa qualidade e entrega rápida,
+                        segura e barata...</h5>
                       <div>
                         <p class="card-text fw-bold">Adriano I.</p>
                         <p class="card-text">13/03/2024</p>
@@ -397,7 +399,8 @@
                   <div class="card-body d-flex flex-column">
                     <i class="bi bi-quote quote-double"></i>
                     <div class="text-center flex-grow-1 d-flex flex-column justify-content-between">
-                      <h5 class="card-title">Top demais, sou cliente fiel da Growth. Todo mês eu compro pelo menos 2 whey com vocês.…</h5>
+                      <h5 class="card-title">Top demais, sou cliente fiel da Growth. Todo mês eu compro pelo menos 2
+                        whey com vocês.…</h5>
                       <div>
                         <p class="card-text fw-bold">Rafael S.</p>
                         <p class="card-text">13/03/2024</p>
@@ -417,11 +420,13 @@
                 </div>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSuplementosAutoplaying" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselClientesAutoplaying"
+              data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselSuplementosAutoplaying" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselClientesAutoplaying"
+              data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
@@ -433,8 +438,27 @@
     <!-- section clientes -->
 
     <!-- section transporte -->
-    <section>
-      <div></div>
+    <section class="d-flex justify-content-center align-items-center">
+      <div class="row justify-content-center transporte-div">
+        <div class="col-md-6 d-flex align-items-center frete-gratis-div">
+          <div>
+            <img class="img-fluid" src="/assets/resources/images/frete.png.png" alt="Frete Grátis">
+          </div>
+          <div class="d-flex flex-column justify-content-center align-items-center text-container">
+            <h2 class="fw-bold text-white">Frete Grátis</h2>
+            <p class="text-white border-bottom d-inline">Consulte Condições</p>
+          </div>
+        </div>
+        <div class="col-md-6 d-flex align-items-center dinheiro-volta-div">
+          <div class="d-flex flex-column justify-content-center align-items-center text-container">
+            <h2 class="fw-bold text-white">Seu dinheiro de Volta</h2>
+            <p class="text-white border-bottom d-inline">Entenda como funciona</p>
+          </div>
+          <div>
+            <img class="img-fluid" src="/assets/resources/images/g-pontos.png.png" alt="Dinheiro de Volta">
+          </div>
+        </div>
+      </div>
     </section>
     <!-- section transporte -->
 
@@ -443,7 +467,41 @@
     <!-- section produtos -->
 
     <!-- section suplementos necessarios para o seu esporte -->
-    <section></section>
+    <section class="section-esportes-div">
+      <div class="align-content-center">
+        <h3 class="text-center fw-bold">Temos o suplemento certo para seu esporte:</h3>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card border-0">
+              <div class="card-body position-relative">
+                <img src="/assets/resources/images/musculacao.png" class="img-fluid" alt="Musculação">
+                <h5 class="card-title position-absolute bottom-0 w-100 fw-bold text-white text-uppercase p-2">MUSCULAÇÃO
+                </h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card border-0">
+              <div class="card-body position-relative">
+                <img src="/assets/resources/images/luta.png" class="img-fluid" alt="Lutas">
+                <h5 class="card-title position-absolute bottom-0 w-100 fw-bold text-white text-uppercase p-2">LUTAS</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card border-0">
+              <div class="card-body position-relative">
+                <img src="/assets/resources/images/corrida.png" class="img-fluid" alt="Corrida">
+                <h5 class="card-title position-absolute bottom-0 w-100 fw-bold text-white text-uppercase p-2">CORRIDA
+                </h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- section suplementos necessarios para o seu esporte -->
 
   </main>
