--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           <img src="../assets/resources/images/growth-logo.png" alt="Growth Supplements Logo">
         </a>
         <div class="d-flex ms-3">
-          <a class="icon-link text-white menu-list" data-bs-toggle="offcanvas" href="#menu-list" role="button"
+          <a class="text-white menu-list" data-bs-toggle="offcanvas" href="#menu-list" role="button"
             aria-controls="menu-list">
             <i class="bi bi-list"></i>
           </a>
@@ -338,9 +338,9 @@
         </div>
       </div>
 
-      <div class="container mt-5">
-        <!-- Carousel Suplementos -->
-        <div class="d-flex carousel-suplementos justify-content-center">
+      <div class="container carousel-clientes mt-5">
+        <!-- Carousel Clientes -->
+        <div class="d-flex justify-content-center">
           <div id="carouselClientesAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -432,7 +432,7 @@
             </button>
           </div>
         </div>
-        <!-- Carousel Suplementos -->
+        <!-- Carousel Clientes -->
       </div>
     </section>
     <!-- section clientes -->
@@ -463,9 +463,83 @@
     <!-- section transporte -->
 
     <!-- section produtos -->
-    <section></section>
+    <section class="produtos-div">
+      <div class="container mt-5">
+        <h2 class="text-center mb-4">Suplementos aminoácidos</h2>
+        <div class="row produtos-cards">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3 d-flex justify-content-center">
+            <div class="card card-prod border-1 border-white shadow">
+              <img src="/assets/resources/images/produtos1.png" class="card-img-top" alt="BCAA 10:1:1">
+              <div class="row stars">
+                <div class="d-flex justify-content-center">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title card-title-prod">BCAA (10:1:1) (200g) (em pó) - Growth Supplements</h5>
+                <p class="card-text p-0">Melhor Custo-Benefício</p>
+                <p class="p-0 card-text-prod">Ajuda Na Hipertrofia</p>
+                <p class="p-0 card-text-prod">Melhor Recuperação Muscular</p>
+                <p class="price-prod">R$50,40</p>
+                <button type="button" class="btn btn-success">Comprar</button>
+              </div>
+            </div>
+          </div>
+  
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3 d-flex justify-content-center">
+            <div class="card card-prod border-1 border-white shadow">
+              <img src="/assets/resources/images/produtos1.png" class="card-img-top" alt="BCAA 10:1:1">
+              <div class="row stars">
+                <div class="d-flex justify-content-center">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title card-title-prod">BCAA (10:1:1) (200g) (em pó) - Growth Supplements</h5>
+                <p class="card-text p-0">Melhor Custo-Benefício</p>
+                <p class="p-0 card-text-prod">Ajuda Na Hipertrofia</p>
+                <p class="p-0 card-text-prod">Melhor Recuperação Muscular</p>
+                <p class="price-prod">R$50,40</p>
+                <button type="button" class="btn btn-success">Comprar</button>
+              </div>
+            </div>
+          </div>
+  
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3 d-flex justify-content-center">
+            <div class="card card-prod border-1 border-white shadow">
+              <img src="/assets/resources/images/produtos1.png" class="card-img-top" alt="BCAA 10:1:1">
+              <div class="row stars">
+                <div class="d-flex justify-content-center">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title card-title-prod">BCAA (10:1:1) (200g) (em pó) - Growth Supplements</h5>
+                <p class="card-text p-0">Melhor Custo-Benefício</p>
+                <p class="p-0 card-text-prod">Ajuda Na Hipertrofia</p>
+                <p class="p-0 card-text-prod">Melhor Recuperação Muscular</p>
+                <p class="price-prod">R$50,40</p>
+                <button type="button" class="btn btn-success">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- section produtos -->
-
+    
     <!-- section suplementos necessarios para o seu esporte -->
     <section class="section-esportes-div">
       <div class="align-content-center">
