--- a/app/index.html
+++ b/app/index.html
@@ -23,11 +23,11 @@
   <!-- Cabeçalho -->
   <!-- Top-Bar -->
   <header>
-    <div class="top-bar py-1">
+    <!-- <div class="top-bar py-1">
       <div class="container ">
         <p class="fw-bold">Qualidade internacional comprovada e preço direto da fábrica.</p>
       </div>
-    </div>
+    </div> -->
     <!-- Top-Bar -->
     <!-- Navegação -->
     <nav class="navbar navbar-expand-lg navbar-dark">
