--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Growth Suplementos</title>
-  <link rel="stylesheet" href="/assets/resources/styles/reset.css">
+  <!-- <link rel="stylesheet" href="/assets/resources/styles/reset.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -53,7 +53,7 @@
           </div>
           <div class="cart text-white">
             <a class="" data-bs-toggle="offcanvas" href="#cart-canvas" role="button" aria-controls="cart-canvas">
-              <i class="bi bi-cart"></i>
+              <i class=" text-white bi bi-cart"></i>
             </a>
           </div>
         </div>
