--- a/app/pages/cadastro/cadastro.html
+++ b/app/pages/cadastro/cadastro.html
@@ -12,8 +12,9 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
-    <link rel="stylesheet" href="/assets/resources/styles/reset.css">
+    <!-- <link rel="stylesheet" href="/assets/resources/styles/reset.css"> -->
     <link rel="stylesheet" href="/assets/resources/styles/styles.css">
+    <link rel="stylesheet" href="/app/pages/cadastro/cadastro.css">
 </head>
 
 <body>
@@ -29,6 +30,94 @@
     <!-- Navegação -->
 </header>
     <!-- Cabeçalho -->
+ <!-- main -->
+<main class="">
+    <section class="form-section d-flex justify-content-center align-content-center">
+        <div class="container mt-5">
+            <div class="card">
+                <div class="card-header text-center">
+                    <h1>Identificação</h1>
+                </div>
+                <h2>Dados pessoais</h2>
+                <div class="card-body">
+                    <form>
+                        <div class="mb-3">
+                            <!-- <label for="email" class="form-label">E-mail *</label> -->
+                            <input type="email" class="form-control" id="email" placeholder="E-mail *" required>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="promocoesOfertas">
+                            <label class="form-check-label" for="promocoesOfertas">Quero receber promoções e ofertas da Growth Supplements.</label>
+                        </div>
+                        <div class="mb-3">
+                            <!-- <label for="cpf" class="form-label">CPF *</label> -->
+                            <input type="text" class="form-control" id="cpf" placeholder="CPF *" required>
+                        </div>
+                        <div class="mb-3">
+                            <!-- <label for="nomeCompleto" class="form-label">Nome completo *</label> -->
+                            <input type="text" class="form-control" id="nomeCompleto" placeholder="Nome completo *" required>
+                        </div>
+                        <div class="mb-3">
+                            <!-- <label for="dataNascimento" class="form-label">Data de nascimento</label> -->
+                            <input type="date" class="form-control" id="dataNascimento" placeholder="Data de nascimento">
+                        </div>
+                        <div class="row">
+                            <div class="col-6 mb-3">
+                                <!-- <label for="telefoneCelular" class="form-label">Telefone celular *</label> -->
+                                <input type="tel" class="form-control" id="telefoneCelular" placeholder="Telefone celular *" required>
+                            </div>
+                            <div class="col-6 mb-3">
+                                <!-- <label for="telefoneFixo" class="form-label">Telefone fixo</label> -->
+                                <input type="tel" class="form-control" id="telefoneFixo" placeholder="Telefone fixo">
+                            </div>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input"  id="promocoesWhatsApp">
+                            <label class="form-check-label" for="promocoesWhatsApp">Quero receber promoções via WhatsApp.</label>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="atualizacoesWhatsApp">
+                            <label class="form-check-label" for="atualizacoesWhatsApp">Quero atualizações de pedido via WhatsApp.</label>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Gênero</label><br>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="genero" id="masculino" value="masculino">
+                                <label class="form-check-label" for="masculino">Masculino</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="genero" id="feminino" value="feminino">
+                                <label class="form-check-label" for="feminino">Feminino</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="genero" id="outro" value="outro">
+                                <label class="form-check-label" for="outro">Outro</label>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <!-- <label for="senha" class="form-label">Senha *</label> -->
+                            <input type="password" class="form-control" id="senha" placeholder="Senha *" required>
+                        </div>
+                        <!-- <div class="mb-3">
+                            <label for="nivelSeguranca" class="form-label">Nível de segurança</label>
+                            <input type="range" class="form-range" id="nivelSeguranca">
+                        </div> -->
+                        <button type="submit" class="btn btn-success">Cadastrar</button>
+                    </form>
+                </div>
+                <div class="mt-3 text-center">
+                    <p><span class="text-success">Compra 100% segura</span></p>
+                    <p>Seus dados pessoais estão protegidos, todas as informações são criptografadas para sua segurança.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        
+    </section>
+</main>
+ <!-- main -->
 
     
 
