Edit: Cadastro e Login 1

--- a/app/pages/cadastro/cadastro.html
+++ b/app/pages/cadastro/cadastro.html
@@ -61,13 +61,11 @@
                             <!-- <label for="dataNascimento" class="form-label">Data de nascimento</label> -->
                             <input type="date" class="form-control" id="dataNascimento" placeholder="Data de nascimento">
                         </div>
-                        <div class="row">
-                            <div class="col-6 mb-3">
-                                <!-- <label for="telefoneCelular" class="form-label">Telefone celular *</label> -->
+                        <div class="form-phone row">
+                            <div class="col-12 col-md-6 mb-3">
                                 <input type="tel" class="form-control" id="telefoneCelular" placeholder="Telefone celular *" required>
                             </div>
-                            <div class="col-6 mb-3">
-                                <!-- <label for="telefoneFixo" class="form-label">Telefone fixo</label> -->
+                            <div class="col-12 col-md-6 mb-3">
                                 <input type="tel" class="form-control" id="telefoneFixo" placeholder="Telefone fixo">
                             </div>
                         </div>
@@ -107,7 +105,7 @@
                         </div>
                 </div>
                 <div class="mt-3 text-center">
-                    <p><span class="text-success">Compra 100% segura</span></p>
+                    <p class="text-success-custom"><span><i class="bi bi-lock-fill"></i> Compra 100% segura</span></p>
                     <p>Seus dados pessoais estão protegidos, todas as informações são criptografadas para sua segurança.</p>
                 </div>
             </div>
