--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -35,33 +35,37 @@
     <!-- Cabeçalho -->
     <!-- main  -->
     <main>
-        <main class="">
-            <section class="form-section d-flex justify-content-center align-content-center">
-                <div class="container mt-5">
-                    <div class="card">
-                        <div class="card-header text-center">
-                        </div>
-                        <h2>Informe seu e-mail ou CPF para continuar</h2>
-                        <div class="card-body">
-                            <form>
-                                <div class="mb-3">
-                                    <!-- <label for="email" class="form-label">E-mail *</label> -->
-                                    <input type="email" class="form-control" id="email" placeholder="E-mail *" required>
-                                </div>
-                                <div class="mb-3">
-                                    <!-- <label for="senha" class="form-label">Senha *</label> -->
-                                    <input type="password" class="form-control" id="senha" placeholder="Senha *" required>
-                                </div>
-                                <button type="submit" class="btn btn-success">Cadastrar</button>
-                            </form>
-                        </div>
-                        <div class="mt-3 text-center">
-                            <p><span class="text-success">Compra 100% segura</span></p>
-                            <p>Seus dados pessoais estão protegidos, todas as informações são criptografadas para sua segurança.</p>
-                        </div>
+        <section class="form-section d-flex justify-content-center align-content-center">
+            <div class="container mt-5">
+                <div class="card">
+                    <div class="card-header text-center"></div>
+                    <h2>Informe seu e-mail para continuar</h2>
+                    <div class="card-body">
+                        <form>
+                            <div class="mb-3">
+                                <!-- <label for="email" class="form-label">E-mail *</label> -->
+                                <input type="email" class="form-control" id="email" placeholder="E-mail *" required>
+                            </div>
+                            <div class="mb-3">
+                                <!-- <label for="senha" class="form-label">Senha *</label> -->
+                                <input type="password" class="form-control" id="senha" placeholder="Senha *" required>
+                            </div>
+                            <!-- <div class="mb-3">
+                                <label for="nivelSeguranca" class="form-label">Nível de segurança</label>
+                                <input type="range" class="form-range" id="nivelSeguranca">
+                            </div> -->
+                            <div class="d-flex justify-content-center h-100">
+                                <button type="submit" class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
+                            </div>
+                    </div>
+                    <div class="mt-3 text-center">
+                        <p class="text-success-custom"><span><i class="bi bi-lock-fill"></i> Compra 100% segura</span></p>
+                        <p>Seus dados pessoais estão protegidos, todas as informações são criptografadas para sua segurança.</p>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
+    
     </main>
     <!-- main -->
     <!-- footer -->
