Add: pagamento.html

--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -39,7 +39,7 @@
             <div class="container mt-5">
                 <div class="card">
                     <div class="card-header text-center"></div>
-                    <h2>Informe seu e-mail para continuar</h2>
+                    <h2 class="fw-bold">Informe seu e-mail para continuar</h2>
                     <div class="card-body">
                         <form>
                             <div class="mb-3">
