--- a/app/pages/pagamento/pagamento.html
+++ b/app/pages/pagamento/pagamento.html
@@ -30,6 +30,20 @@
     <!-- Navegação -->
 </header>
  <!-- Cabeçalho -->
+  <!-- main -->
+  <main>
+    <section>
+
+    </section>
+    <section>
+
+    </section>
+
+    <section>
+        
+    </section>
+  </main>
+  <!-- main -->
   <!-- footer -->
   <div id="footer-placeholder"></div>
   <!-- footer -->
