Edit: Pagamento OK

--- a/app/footer.html
+++ b/app/footer.html
@@ -1,5 +1,5 @@
 <!-- Roda-pé -->
-<footer class="footer">
+<footer>
     <p>&copy; 2024 Loja de Suplementos. Todos os direitos reservados.</p>
 </footer>
 <!-- Roda-pé -->
