--- a/app/pages/cadastro/cadastro.html
+++ b/app/pages/cadastro/cadastro.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <!-- Favicons -->
-    <div id="favicons-placeholder"></div>
-    <!-- Favicons -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth Suplementos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
+        rel="stylesheet">
     <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
     <!-- <link rel="stylesheet" href="/assets/resources/styles/reset.css"> -->
     <link rel="stylesheet" href="/assets/resources/styles/styles.css">
@@ -18,111 +17,130 @@
 </head>
 
 <body>
+    <!-- Favicons -->
+    <div id="favicons-placeholder"></div>
+    <!-- Favicons -->
     <!-- Cabeçalho -->
-    <!-- Navegação -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/app/index.html">
-                <img src="/assets/resources/images/growth-logo.png" alt="Growth Supplements Logo">
-            </a>
-        </div>
-    </nav>
-    <!-- Navegação -->
-</header>
+    <header class="">
+        <!-- Navegação -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="arrow-voltar">
+                <a href="/app/index.html"><i class="bi bi-chevron-left text-black"></i></a>
+            </div>
+            <div class="container justify-content-center">
+                <a class="navbar-brand d-flex justify-content-center align-items-center" href="/app/index.html">
+                    <img src="/assets/resources/images/growth-logo.png" alt="Growth Supplements Logo">
+                </a>
+            </div>
+        </nav>
+        <!-- Navegação -->
+    </header>
     <!-- Cabeçalho -->
- <!-- main -->
-<main class="">
-    <section class="form-section d-flex justify-content-center align-content-center">
-        <div class="container mt-5">
-            <div class="card">
-                <div class="card-header text-center">
-                    <h1 class="fw-bold">1. Identificação</h1>
-                </div>
-                <h2>Dados pessoais</h2>
-                <div class="card-body">
-                    <form>
-                        <div class="mb-3">
-                            <!-- <label for="email" class="form-label">E-mail *</label> -->
-                            <input type="email" class="form-control" id="email" placeholder="E-mail *" required>
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="promocoesOfertas">
-                            <label class="form-check-label fw-bold" for="promocoesOfertas">Quero receber promoções e ofertas da Growth Supplements.</label>
-                        </div>
-                        <div class="mb-3">
-                            <!-- <label for="cpf" class="form-label">CPF *</label> -->
-                            <input type="text" class="form-control" id="cpf" placeholder="CPF *" required>
-                        </div>
-                        <div class="mb-3">
-                            <!-- <label for="nomeCompleto" class="form-label">Nome completo *</label> -->
-                            <input type="text" class="form-control" id="nomeCompleto" placeholder="Nome completo *" required>
-                        </div>
-                        <div class="mb-3">
-                            <!-- <label for="dataNascimento" class="form-label">Data de nascimento</label> -->
-                            <input type="date" class="form-control" id="dataNascimento" placeholder="Data de nascimento">
-                        </div>
-                        <div class="form-phone row">
-                            <div class="col-12 col-md-6 mb-3">
-                                <input type="tel" class="form-control" id="telefoneCelular" placeholder="Telefone celular *" required>
+    <!-- main -->
+    <main class="">
+        <section class="form-section d-flex justify-content-center align-content-center">
+            <div class="container mt-5">
+                <div class="card">
+                    <div class="card-header text-center">
+                        <h1 class="fw-bold">1. Identificação</h1>
+                    </div>
+                    <h2>Dados pessoais</h2>
+                    <div class="card-body">
+                        <form>
+                            <div class="mb-3">
+                                <!-- <label for="email" class="form-label">E-mail *</label> -->
+                                <input type="email" class="form-control" id="email" placeholder="E-mail *" required>
                             </div>
-                            <div class="col-12 col-md-6 mb-3">
-                                <input type="tel" class="form-control" id="telefoneFixo" placeholder="Telefone fixo">
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="promocoesOfertas">
+                                <label class="form-check-label fw-bold" for="promocoesOfertas">Quero receber promoções e
+                                    ofertas da Growth Supplements.</label>
                             </div>
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input"  id="promocoesWhatsApp">
-                            <label class="form-check-label fw-bold" for="promocoesWhatsApp">Quero receber promoções via WhatsApp.</label>
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="atualizacoesWhatsApp">
-                            <label class="form-check-label fw-bold" for="atualizacoesWhatsApp">Quero atualizações de pedido via WhatsApp.</label>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Gênero</label><br>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="genero" id="masculino" value="masculino">
-                                <label class="form-check-label" for="masculino">Masculino</label>
+                            <div class="mb-3">
+                                <!-- <label for="cpf" class="form-label">CPF *</label> -->
+                                <input type="text" class="form-control" id="cpf" placeholder="CPF *" required>
                             </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="genero" id="feminino" value="feminino">
-                                <label class="form-check-label" for="feminino">Feminino</label>
+                            <div class="mb-3">
+                                <!-- <label for="nomeCompleto" class="form-label">Nome completo *</label> -->
+                                <input type="text" class="form-control" id="nomeCompleto" placeholder="Nome completo *"
+                                    required>
                             </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="genero" id="outro" value="outro">
-                                <label class="form-check-label" for="outro">Outro</label>
+                            <div class="mb-3">
+                                <!-- <label for="dataNascimento" class="form-label">Data de nascimento</label> -->
+                                <input type="date" class="form-control" id="dataNascimento"
+                                    placeholder="Data de nascimento">
                             </div>
-                        </div>
-                        <div class="mb-3">
-                            <!-- <label for="senha" class="form-label">Senha *</label> -->
-                            <input type="password" class="form-control" id="senha" placeholder="Senha *" required>
-                        </div>
-                        <!-- <div class="mb-3">
+                            <div class="form-phone row">
+                                <div class="col-12 col-md-6 mb-3">
+                                    <input type="tel" class="form-control" id="telefoneCelular"
+                                        placeholder="Telefone celular *" required>
+                                </div>
+                                <div class="col-12 col-md-6 mb-3">
+                                    <input type="tel" class="form-control" id="telefoneFixo"
+                                        placeholder="Telefone fixo">
+                                </div>
+                            </div>
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="promocoesWhatsApp">
+                                <label class="form-check-label fw-bold" for="promocoesWhatsApp">Quero receber promoções
+                                    via WhatsApp.</label>
+                            </div>
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="atualizacoesWhatsApp">
+                                <label class="form-check-label fw-bold" for="atualizacoesWhatsApp">Quero atualizações de
+                                    pedido via WhatsApp.</label>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Gênero</label><br>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="genero" id="masculino"
+                                        value="masculino">
+                                    <label class="form-check-label" for="masculino">Masculino</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="genero" id="feminino"
+                                        value="feminino">
+                                    <label class="form-check-label" for="feminino">Feminino</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="genero" id="outro" value="outro">
+                                    <label class="form-check-label" for="outro">Outro</label>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <!-- <label for="senha" class="form-label">Senha *</label> -->
+                                <input type="password" class="form-control" id="senha" placeholder="Senha *" required>
+                            </div>
+                            <!-- <div class="mb-3">
                             <label for="nivelSeguranca" class="form-label">Nível de segurança</label>
                             <input type="range" class="form-range" id="nivelSeguranca">
                         </div> -->
-                        <div class="d-flex justify-content-center h-100">
-                            <button type="submit" class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
-                        </div>
-                </div>
-                <div class="mt-3 text-center">
-                    <p class="text-success-custom"><span><i class="bi bi-lock-fill"></i> Compra 100% segura</span></p>
-                    <p>Seus dados pessoais estão protegidos, todas as informações são criptografadas para sua segurança.</p>
+                            <div class="d-flex justify-content-center h-100">
+                                <button type="submit"
+                                    class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
+                            </div>
+                    </div>
+                    <div class="mt-3 text-center">
+                        <p class="text-success-custom"><span><i class="bi bi-lock-fill"></i> Compra 100% segura</span>
+                        </p>
+                        <p>Seus dados pessoais estão protegidos, todas as informações são criptografadas para sua
+                            segurança.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section>
-        
-    </section>
-</main>
- <!-- main -->
+        <section>
 
-    
+        </section>
+    </main>
+    <!-- main -->
 
-  <!-- footer -->
-  <div id="footer-placeholder"></div>
-  <!-- footer -->
+
+
+    <!-- footer -->
+    <div class="footer" id="footer-placeholder"></div>
+    <!-- footer -->
     <!-- Script -->
     <script src="/app/util/routers.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -131,4 +149,5 @@
     <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
     <!-- Script -->
 </body>
+
 </html>
