--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -2,9 +2,6 @@
 <html lang="pt-BR">
 
 <head>
-    <!-- Favicons -->
-    <div id="favicons-placeholder"></div>
-    <!-- Favicons -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth Suplementos</title>
@@ -20,12 +17,18 @@
 </head>
 
 <body>
+    <!-- Favicons -->
+    <div id="favicons-placeholder"></div>
+    <!-- Favicons -->
     <!-- Cabeçalho -->
-    <header>
+    <header class="">
         <!-- Navegação -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="/app/index.html">
+            <div class="arrow-voltar">
+                <a href="/app/pages/cadastro/cadastro.html"><i class="bi bi-chevron-left text-black"></i></a>
+            </div>
+            <div class="container justify-content-center">
+                <a class="navbar-brand d-flex justify-content-center align-items-center" href="/app/index.html">
                     <img src="/assets/resources/images/growth-logo.png" alt="Growth Supplements Logo">
                 </a>
             </div>
@@ -55,21 +58,24 @@
                                 <input type="range" class="form-range" id="nivelSeguranca">
                             </div> -->
                             <div class="d-flex justify-content-center h-100">
-                                <button type="submit" class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
+                                <button type="submit"
+                                    class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
                             </div>
                     </div>
                     <div class="mt-3 text-center">
-                        <p class="text-success-custom"><span><i class="bi bi-lock-fill"></i> Compra 100% segura</span></p>
-                        <p>Seus dados pessoais estão protegidos, todas as informações são criptografadas para sua segurança.</p>
+                        <p class="text-success-custom"><span><i class="bi bi-lock-fill"></i> Compra 100% segura</span>
+                        </p>
+                        <p>Seus dados pessoais estão protegidos, todas as informações são criptografadas para sua
+                            segurança.</p>
                     </div>
                 </div>
             </div>
         </section>
-    
+
     </main>
     <!-- main -->
     <!-- footer -->
-    <div id="footer-placeholder"></div>
+    <div class="footer" id="footer-placeholder"></div>
     <!-- footer -->
     <!-- Script -->
     <script src="/app/util/routers.js"></script>
