--- a/app/pages/pagamento/pagamento.html
+++ b/app/pages/pagamento/pagamento.html
@@ -1,58 +1,183 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-     <!-- Favicons -->
-    <div id="favicons-placeholder"></div>
-    <!-- Favicons -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Growth Suplementos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
-    <link rel="stylesheet" href="/assets/resources/styles/reset.css">
-    <link rel="stylesheet" href="/assets/resources/styles/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Growth Suplementos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
+    rel="stylesheet">
+  <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
+  <link rel="stylesheet" href="/assets/resources/styles/reset.css">
+  <link rel="stylesheet" href="/assets/resources/styles/styles.css">
+  <link rel="stylesheet" href="pagamento.css">
 </head>
 
 <body>
-    <!-- Cabeçalho -->
+  <!-- Favicons -->
+  <div id="favicons-placeholder"></div>
+  <!-- Favicons -->
+  <!-- Cabeçalho -->
   <header>
     <!-- Navegação -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/app/index.html">
-                <img src="/assets/resources/images/growth-logo.png" alt="Growth Supplements Logo">
-            </a>
-        </div>
+      <div class="arrow-voltar">
+        <a href="/app/index.html"><i class="bi bi-chevron-left text-black"></i></a>
+      </div>
+      <div class="container justify-content-center">
+        <a class="navbar-brand d-flex justify-content-center align-items-center" href="/app/index.html">
+          <img src="/assets/resources/images/growth-logo.png" alt="Growth Supplements Logo">
+        </a>
+      </div>
     </nav>
     <!-- Navegação -->
-</header>
- <!-- Cabeçalho -->
+  </header>
+  <!-- Cabeçalho -->
   <!-- main -->
   <main>
-    <section>
-
-    </section>
-    <section>
-
-    </section>
-
-    <section>
-        
+    <section class="row justify-content-center">
+      <!-- Compra Segura -->
+      <div class="div-compra-segura">
+        <div class="card mt-5 equal-height-card d-flex flex-column">
+          <div class="card-body flex-grow-1 d-flex flex-column">
+            <!-- Conteúdo do card -->
+            <div class="div-comp d-flex align-items-center text-center justify-content-center mb-2">
+              <img src="/assets/resources/images/selo-google.png.jpg" alt="Selo Google" class="mr-2">
+              <span class="ml-2 sucess-color"><i class="bi bi-lock-fill"></i>Compra 100% segura</span>
+            </div>
+            <p class="mt-2 mb-2">Seus dados pessoais estão protegidos, todas as informações são criptografadas para
+              sua
+              segurança.</p>
+            <div class="d-flex flex-row ">
+              <div class="mr-3 image-row">
+                <img src="/assets/resources/images/selo-ebit.png.png" alt="Selo Ebit">
+              </div>
+              <div class="mr-3 image-row">
+                <div class="align-content-center align-items-center mt-3">
+                  <img src="/assets/resources/images/site-seguro-google.png.png" alt="Site Seguro Google">
+                </div>
+              </div>
+              <div class="mr-3 image-row">
+                <div class="align-content-center align-items-center mt-3">
+                  <img src="/assets/resources/images/seal.png.png" alt="Seal">
+                </div>
+              </div>
+              <div class="mr-3 image-row">
+                <div class="align-content-center align-items-center mt-1">
+                  <img src="/assets/resources/images/trustvox.png.png" alt="Trustvox">
+                </div>
+              </div>
+            </div>
+            <ul class="info-section mt-3">
+              <li class="mb-1">
+                <p class=""><i class="bi bi-check-circle-fill sucess-color mr-2 m-2 text-center"></i>Possuímos o seu produto em
+                  estoque e ele chegará rápido até você.</p>
+              </li>
+              <li class="mb-1">
+                <p class=""><i class="bi bi-check-circle-fill sucess-color mr-2 m-2"></i>Produtos com padrão europeu
+                  de
+                  qualidade.</p>
+              </li>
+              <li class="mb-1">
+                <p class=""><i class="bi bi-check-circle-fill sucess-color mr-2 m-2"></i>Máquinas da fábrica
+                  semanalmente
+                  verificadas.</p>
+              </li>
+              <li class="mb-1">
+                <p class=""><i class="bi bi-check-circle-fill sucess-color mr-2 m-2"></i>Produtos aprovados em
+                  todos os laudos.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Pagamento -->
+      <div class="div-pagamento-cartao">
+        <div class="form-section d-flex justify-content-center align-content-center">
+          <div class="container mt-5">
+            <div class="card d-flex flex-column equal-height-card">
+              <div class="card-header text-center">
+                <h2 class="fw-bold">Pagamento</h2>
+              </div>
+              <div class="card-body flex-grow-1 d-flex flex-column">
+                <div class="div-credit-i mb-4">
+                  <i class="bi bi-credit-card-2-back"></i>
+                </div>
+                <form>
+                  <div class="mb-4">
+                    <label for="number" class="form-label fw-bold">Número do cartão</label>
+                    <input type="number" class="form-control border-black" id="email" placeholder="4716 8039 02|"
+                      required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="name" class="form-label fw-bold">Nome do titular</label>
+                    <input type="name" class="form-control border-black" id="senha"
+                      placeholder="Nome como está no cartão" required>
+                  </div>
+                  <div class="row">
+                    <div class="mb-3 col-12 col-md-6 mb-3">
+                      <label for="number" class="form-label fw-bold">Validade</label>
+                      <input type="number" class="form-control border-black" id="senha" placeholder="mm/aa" required>
+                    </div>
+                    <div class="mb-3 col-12 col-md-6 mb-3">
+                      <label for="senha" class="form-label fw-bold">CVV</label>
+                      <input type="password" class="form-control border-black" id="senha" placeholder="***" required>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Resumo -->
+      <div class="div-resumo-compra">
+        <div class="container mt-5">
+          <div class="card card-resumo equal-height-card d-flex flex-column">
+            <div class="card-header border-0 text-center">
+              <h2 class="card-title fw-bold">Resumo do Pedido</h2>
+            </div>
+            <div class="card-body flex-grow-1 d-flex flex-column">
+              <div class="row">
+                <div class="div-produto col-12 p-3">
+                  <p class="fw-bold">BCAA (10:1:1) (200g) (em pó) - Growth Supplements</p>
+                  <p class="mt-1">Quantidade: 1</p>
+                  <p class="mt-1">R$ 56,00</p>
+                </div>
+                <div class="mt-5 col-12 p-3">
+                  <p>Subtotal: <span>R$ 56,00</span></p>
+                </div>
+                <div class="mt-5 col-12 p-3">
+                  <h3 class="fw-bold">Total: <span>R$ 56,00</span></h3>
+                </div>
+                <div class="col-12 d-flex justify-content-center my-3">
+                  <button type="button" class="custom-btn button-send btn btn-success border-0">Comprar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="voltar-carrinho col-12 mt-4">
+            <a class="fw-bold" href="/app/index.html">Voltar ao carrinho</a>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
+
   <!-- main -->
   <!-- footer -->
-  <div id="footer-placeholder"></div>
+  <div class="footer" id="footer-placeholder"></div>
   <!-- footer -->
-    <!-- Script -->
-    <script src="/app/util/routers.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
-    <!-- Script -->
+  <!-- Script -->
+  <script src="/app/util/routers.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
+  <!-- Script -->
 </body>
+
 </html>
